# services/com — gRPC bridge between the in-host supervisor (TIPC) and
# external clients (dashboards / supdbg / rf-theia).
#
# ONE binary now: //services/com/main:com, a native Bazel cc_binary. It runs
# BOTH nodes from services/system/com/package.art —
#   ComDaemon    (gen_server, nanopb mailbox node), and
#   ComGrpcProxy (the gRPC bridge runnable; do_* in impl/ComGrpcProxy_handlers).
# The old World-A hand-rolled gRPC main() (services/com/src/, + a
# rules_foreign_cc cmake() target) is gone — World A folded into World B.
#
# How grpc++ links natively (no bzlmod grpc): host protoc + grpc_cpp_plugin
# generate the bridge .pb.cc / .grpc.pb.cc in the com_bridge_grpc_gen genrule
# (same host-protoc pattern as //platform/supervisor:supervisor_pb_cpp_gen),
# and com_bridge_grpc links grpc++ via system linkopts. The process therefore
# links libprotobuf (gRPC edge) AND libprotobuf-nanopb (ComDaemon's TIPC
# wire) — the deliberate two-codec, one-process design.

load("@rules_cc//cc:defs.bzl", "cc_library")
load("@rpi4_sysroot//:path.bzl", "RPI4_SYSROOT")

package(default_visibility = ["//visibility:public"])

# The proto codegen toolset (protoc + grpc_cpp_plugin) must match the protobuf
# the .pb.{cc,h} are LINKED against, or the headers `#error regenerate ... newer
# protoc`. On the host (x86) that's the system protoc/plugin (= the host
# libprotobuf the cc_binary links). Targeting aarch64 the link uses the rpi4
# SYSROOT's libprotobuf (bookworm 3.21.12 / grpc 1.51), so codegen must run a
# host-x86 protoc 3.21.12 + grpc_cpp_plugin 1.51 — staged (with their runtime
# .so's) under third_party/codegen-bookworm-x86/ (gitignored host data; the
# RPI4_SYSROOT repo rule captures the workspace abs path the same way).
# These _CG_* select strings PREFIX the genrule cmd with the right PATH/lib env.
# RPI4_SYSROOT = <ws>/third_party/sysroot/rpi4 → the codegen dir is at
# <ws>/third_party/codegen-bookworm-x86 (two dirs up, then down).
_CG_DIR = RPI4_SYSROOT + "/../../codegen-bookworm-x86"
_CODEGEN_ENV = select({
    "//rules/config:is_arm64": (
        "export PATH=\"" + _CG_DIR + "/bin:$$PATH\";" +
        " export LD_LIBRARY_PATH=\"" + _CG_DIR + "/lib:$${LD_LIBRARY_PATH:-}\";"
    ),
    "//conditions:default": "",
})

# .proto sources consumed by external CMake builds (the repo-root
# supervisor-gui/ tree) via a relative path into this package.
filegroup(
    name = "proto_srcs",
    srcs = glob(
        ["proto/**/*.proto"],
        allow_empty = False,
    ),
)

# ---------------------------------------------------------------------------
# gRPC bridge protos (libprotobuf C++ + grpc service stubs).
#
# supervisor_bridge.proto imports the supervisor's own message protos with
# bare names (import "ChildState.proto";), so protoc gets two -I roots: this
# package's proto/ and the supervisor's generated/proto/. We emit ONLY the
# bridge's own .pb/.grpc.pb here; the supervisor message .pb.cc come from
# //platform/supervisor:supervisor_pb_cpp (linked as a dep below) — no
# double-compilation of those types.
genrule(
    name = "com_bridge_grpc_gen",
    srcs = [
        "proto/supervisor_bridge.proto",
        # The consolidated supervisor proto (package system_supervisor) the
        # bridge imports, + the runtime proto IT imports. No libprotobuf
        # supervisor_pb_cpp target exists, so we protoc the supervisor +
        # runtime .pb.cc HERE alongside the bridge (one TU set, one -I world).
        "//platform/proto/system/supervisor:supervisor_proto",
        "//platform/runtime:runtime_proto_src",
    ],
    outs = [
        "cpp/supervisor_bridge.pb.cc",
        "cpp/supervisor_bridge.pb.h",
        "cpp/supervisor_bridge.grpc.pb.cc",
        "cpp/supervisor_bridge.grpc.pb.h",
        "cpp/supervisor.pb.cc",
        "cpp/supervisor.pb.h",
        "cpp/platform_runtime/runtime.pb.cc",
        "cpp/platform_runtime/runtime.pb.h",
    ],
    cmd = ("set -e;" +
           _CODEGEN_ENV +   # aarch64: use the staged bookworm-x86 protoc/plugin
           " com_dir=$$(dirname $(location proto/supervisor_bridge.proto));" +
           " sup_proto=$(location //platform/proto/system/supervisor:supervisor_proto);" +
           " sup_dir=$$(dirname $$sup_proto);" +
           " rt_proto=$(location //platform/runtime:runtime_proto_src);" +
           " rt_root=$$(dirname $$(dirname $$rt_proto));" +
           " out_dir=$$(dirname $(location cpp/supervisor_bridge.pb.cc));" +
           # bridge imports supervisor.proto (flat, on sup_dir); supervisor.proto
           # imports platform_runtime/runtime.proto (on rt_root). protoc all
           # three so the .pb.cc for the supervisor + runtime messages exist.
           " protoc -I $$com_dir -I $$sup_dir -I $$rt_root" +
           "   --cpp_out=$$out_dir --grpc_out=$$out_dir" +
           "   --plugin=protoc-gen-grpc=$$(which grpc_cpp_plugin)" +
           "   $$com_dir/supervisor_bridge.proto;" +
           " protoc -I $$sup_dir -I $$rt_root --cpp_out=$$out_dir $$sup_proto;" +
           " protoc -I $$rt_root --cpp_out=$$out_dir $$rt_proto;"),
    # host-installed protoc + grpc_cpp_plugin, same policy as the supervisor
    # and nanopb genrules.
    local = True,
)

cc_library(
    name = "com_bridge_grpc",
    srcs = [
        "cpp/supervisor_bridge.pb.cc",
        "cpp/supervisor_bridge.grpc.pb.cc",
        "cpp/supervisor.pb.cc",
        "cpp/platform_runtime/runtime.pb.cc",
    ],
    hdrs = [
        "cpp/supervisor_bridge.pb.h",
        "cpp/supervisor_bridge.grpc.pb.h",
        "cpp/supervisor.pb.h",
        "cpp/platform_runtime/runtime.pb.h",
    ],
    # `cpp/` is the include root so callers write
    # `#include "supervisor_bridge.grpc.pb.h"` and the generated .pb.cc find
    # the supervisor headers (flat names) on the same path.
    includes = ["cpp"],
    copts = [
        "-std=c++17",
        # protobuf/grpc-generated sources are noisy under -Wall -Wextra.
        "-Wno-unused-parameter",
    ],
    deps = [
        # libprotobuf (the system C++ runtime). The supervisor + runtime .pb.cc
        # are compiled in THIS library now (no separate supervisor_pb_cpp).
        "//third_party:system_protobuf",
    ],
    # grpc++ + its deps from the host toolchain (not in bzlmod). protobuf is
    # already pulled transitively by supervisor_pb_cpp → //third_party:
    # system_protobuf, but grpc needs -lgrpc++ -lgrpc -lgpr explicitly.
    # On Ubuntu 24.04 gRPC's headers reference absl::Mutex but -lgrpc++ no longer
    # pulls abseil, so the bridge fails to link (undefined absl::*::Mutex::Lock).
    # -labsl_synchronization (DT_NEEDED-pulls its own absl deps) resolves it;
    # it's present + harmless on 22.04 too (needs libabsl-dev for the .so).
    linkopts = [
        "-lgrpc++",
        "-lgrpc",
        "-lgpr",
        "-labsl_synchronization",
        # OpenSSL: com_tls.hpp's engine-mode TLS (phase 3) uses the ENGINE API
        # (ENGINE_by_id / ENGINE_load_dynamic) to load the theia_crypto engine so
        # the TLS private key never enters com. grpc's TLS here is system OpenSSL.
        "-lssl",
        "-lcrypto",
    ],
)
