# services/com — gRPC bridge between the in-host supervisor (TIPC) and
# external clients (dashboards / tdb / rf-theia).
#
# ONE binary now: //services/com/main:com, a native Bazel cc_binary. It runs
# BOTH nodes from services/system/com/package.art —
#   ComDaemon    (gen_server, nanopb mailbox node), and
#   ComGrpcProxy (the gRPC bridge runnable; do_* in impl/ComGrpcProxy_handlers).
# The old World-A hand-rolled gRPC main() (services/com/src/, + a
# rules_foreign_cc cmake() target) is gone — World A folded into World B.
#
# How grpc++ links natively (no bzlmod grpc): host protoc + grpc_cpp_plugin
# generate the bridge .pb.cc / .grpc.pb.cc in the com_bridge_grpc_gen genrule
# (same host-protoc pattern as //platform/supervisor:supervisor_pb_cpp_gen),
# and com_bridge_grpc links grpc++ via system linkopts. The process therefore
# links libprotobuf (gRPC edge) AND libprotobuf-nanopb (ComDaemon's TIPC
# wire) — the deliberate two-codec, one-process design.

load("@rules_cc//cc:defs.bzl", "cc_library")
load("@rpi4_sysroot//:path.bzl", "RPI4_SYSROOT")

package(default_visibility = ["//visibility:public"])

# The proto codegen toolset (protoc + grpc_cpp_plugin) must match the protobuf
# the .pb.{cc,h} are LINKED against, or the headers `#error regenerate ... newer
# protoc`. On the host (x86) that's the system protoc/plugin (= the host
# libprotobuf the cc_binary links). Targeting aarch64 the link uses the rpi4
# SYSROOT's libprotobuf (bookworm 3.21.12 / grpc 1.51), so codegen must run a
# host-x86 protoc 3.21.12 + grpc_cpp_plugin 1.51 — staged (with their runtime
# .so's) under third_party/codegen-bookworm-x86/ (gitignored host data; the
# RPI4_SYSROOT repo rule captures the workspace abs path the same way).
# These _CG_* select strings PREFIX the genrule cmd with the right PATH/lib env.
# RPI4_SYSROOT = <ws>/third_party/sysroot/rpi4 → the codegen dir is at
# <ws>/third_party/codegen-bookworm-x86 (two dirs up, then down).
_CG_DIR = RPI4_SYSROOT + "/../../codegen-bookworm-x86"
_CODEGEN_ENV = select({
    "//rules/config:is_arm64": (
        "export PATH=\"" + _CG_DIR + "/bin:$$PATH\";" +
        " export LD_LIBRARY_PATH=\"" + _CG_DIR + "/lib:$${LD_LIBRARY_PATH:-}\";"
    ),
    "//conditions:default": "",
})

# .proto sources consumed by external CMake builds (the repo-root
# supervisor-gui/ tree) via a relative path into this package.
filegroup(
    name = "proto_srcs",
    srcs = glob(
        ["proto/**/*.proto"],
        allow_empty = False,
    ),
)

# ---------------------------------------------------------------------------
# gRPC bridge protos (libprotobuf C++ + grpc service stubs).
#
# supervisor_bridge.proto imports the supervisor's own message protos with
# bare names (import "ChildState.proto";), so protoc gets two -I roots: this
# package's proto/ and the supervisor's generated/proto/. We emit ONLY the
# bridge's own .pb/.grpc.pb here; the supervisor message .pb.cc come from
# //platform/supervisor:supervisor_pb_cpp (linked as a dep below) — no
# double-compilation of those types.
genrule(
    name = "com_bridge_grpc_gen",
    srcs = [
        "proto/supervisor_bridge.proto",
        # The consolidated supervisor proto (package system_supervisor) the
        # bridge imports, + the runtime proto IT imports. No libprotobuf
        # supervisor_pb_cpp target exists, so we protoc the supervisor +
        # runtime .pb.cc HERE alongside the bridge (one TU set, one -I world).
        "//platform/proto/system/supervisor:supervisor_proto",
        "//platform/runtime:runtime_proto_src",
    ],
    outs = [
        "cpp/supervisor_bridge.pb.cc",
        "cpp/supervisor_bridge.pb.h",
        "cpp/supervisor_bridge.grpc.pb.cc",
        "cpp/supervisor_bridge.grpc.pb.h",
        "cpp/supervisor.pb.cc",
        "cpp/supervisor.pb.h",
        "cpp/platform_runtime/runtime.pb.cc",
        "cpp/platform_runtime/runtime.pb.h",
    ],
    cmd = ("set -e;" +
           _CODEGEN_ENV +   # aarch64: use the staged bookworm-x86 protoc/plugin
           " com_dir=$$(dirname $(location proto/supervisor_bridge.proto));" +
           " sup_proto=$(location //platform/proto/system/supervisor:supervisor_proto);" +
           " sup_dir=$$(dirname $$sup_proto);" +
           " rt_proto=$(location //platform/runtime:runtime_proto_src);" +
           " rt_root=$$(dirname $$(dirname $$rt_proto));" +
           " out_dir=$$(dirname $(location cpp/supervisor_bridge.pb.cc));" +
           # bridge imports supervisor.proto (flat, on sup_dir); supervisor.proto
           # imports platform_runtime/runtime.proto (on rt_root). protoc all
           # three so the .pb.cc for the supervisor + runtime messages exist.
           " protoc -I $$com_dir -I $$sup_dir -I $$rt_root" +
           "   --cpp_out=$$out_dir --grpc_out=$$out_dir" +
           "   --plugin=protoc-gen-grpc=$$(which grpc_cpp_plugin)" +
           "   $$com_dir/supervisor_bridge.proto;" +
           " protoc -I $$sup_dir -I $$rt_root --cpp_out=$$out_dir $$sup_proto;" +
           " protoc -I $$rt_root --cpp_out=$$out_dir $$rt_proto;"),
    # host-installed protoc + grpc_cpp_plugin, same policy as the supervisor
    # and nanopb genrules.
    local = True,
)

cc_library(
    name = "com_bridge_grpc",
    srcs = [
        "cpp/supervisor_bridge.pb.cc",
        "cpp/supervisor_bridge.grpc.pb.cc",
        "cpp/supervisor.pb.cc",
        "cpp/platform_runtime/runtime.pb.cc",
    ],
    hdrs = [
        "cpp/supervisor_bridge.pb.h",
        "cpp/supervisor_bridge.grpc.pb.h",
        "cpp/supervisor.pb.h",
        "cpp/platform_runtime/runtime.pb.h",
    ],
    # `cpp/` is the include root so callers write
    # `#include "supervisor_bridge.grpc.pb.h"` and the generated .pb.cc find
    # the supervisor headers (flat names) on the same path.
    includes = ["cpp"],
    copts = [
        "-std=c++17",
        # protobuf/grpc-generated sources are noisy under -Wall -Wextra.
        "-Wno-unused-parameter",
    ],
    deps = [
        # libprotobuf (the system C++ runtime). The supervisor + runtime .pb.cc
        # are compiled in THIS library now (no separate supervisor_pb_cpp).
        "//third_party:system_protobuf",
    ],
    # grpc++ + abseil link. PRINCIPLE: the shipped DISTRO (the aarch64 .deb) must
    # carry NO grpc/abseil shared libs — a cross-built .so soname (sysroot abseil
    # .20220623) won't match the target's (Debian-13 .20240722) anyway. So the
    # rpi4 cross-build STATICALLY links the grpc/abseil closure (the .a's are in
    # the sysroot); only ssl/crypto/system stay dynamic (libc-coupled, never
    # bundled). The host x86 dev box has grpc as SHARED-ONLY (apt ships no .a's),
    # so it keeps the dynamic -l form — it's a dev/test box, not a shipped distro.
    # select() on the target platform honors "no shared libs in the distro" while
    # keeping both envs buildable.
    #
    # The static group goes inside -Wl,-Bstatic … -Wl,-Bdynamic + --start-group
    # (abseil archives have circular deps). The closure is the deduped
    # `pkg-config --static --libs grpc++` set, all present in the rpi4 sysroot.
    # LINK ORDER: the grpc/abseil group comes FIRST; the system libs it depends
    # on (ssl/crypto/m/…) come AFTER, so the linker resolves grpc's references
    # into them (a static archive only pulls what an EARLIER object referenced).
    linkopts = select({
        "@pero_theia//rules/config:is_arm64": [
            "-Wl,-Bstatic", "-Wl,--start-group",
            "-lgrpc++", "-lgrpc", "-lgpr",
            "-laddress_sorting", "-lre2", "-lupb", "-lcares", "-lz",
            # ALL abseil archives (the full sysroot set) inside the group — no
            # hand-pruned subset to drift out of date as grpc's abseil use grows.
            # Order is irrelevant within --start-group (it resolves circular refs).
            "-labsl_bad_any_cast_impl", "-labsl_bad_optional_access",
            "-labsl_bad_variant_access", "-labsl_base", "-labsl_city",
            "-labsl_civil_time", "-labsl_cord", "-labsl_cord_internal",
            "-labsl_cordz_functions", "-labsl_cordz_handle", "-labsl_cordz_info",
            "-labsl_cordz_sample_token", "-labsl_debugging_internal",
            "-labsl_demangle_internal", "-labsl_examine_stack",
            "-labsl_exponential_biased", "-labsl_failure_signal_handler",
            "-labsl_flags_commandlineflag", "-labsl_flags_commandlineflag_internal",
            "-labsl_flags_config", "-labsl_flags_internal",
            "-labsl_flags_marshalling", "-labsl_flags_parse",
            "-labsl_flags_private_handle_accessor", "-labsl_flags_program_name",
            "-labsl_flags_reflection", "-labsl_flags_usage",
            "-labsl_flags_usage_internal", "-labsl_graphcycles_internal",
            "-labsl_hash", "-labsl_hashtablez_sampler", "-labsl_int128",
            "-labsl_leak_check", "-labsl_log_severity", "-labsl_low_level_hash",
            "-labsl_malloc_internal", "-labsl_periodic_sampler",
            "-labsl_random_distributions",
            "-labsl_random_internal_distribution_test_util",
            "-labsl_random_internal_platform", "-labsl_random_internal_pool_urbg",
            "-labsl_random_internal_randen", "-labsl_random_internal_randen_hwaes",
            "-labsl_random_internal_randen_hwaes_impl",
            "-labsl_random_internal_randen_slow",
            "-labsl_random_internal_seed_material",
            "-labsl_random_seed_gen_exception", "-labsl_random_seed_sequences",
            "-labsl_raw_hash_set", "-labsl_raw_logging_internal",
            "-labsl_scoped_set_env", "-labsl_spinlock_wait", "-labsl_stacktrace",
            "-labsl_status", "-labsl_statusor", "-labsl_strerror",
            "-labsl_str_format_internal", "-labsl_strings",
            "-labsl_strings_internal", "-labsl_symbolize",
            "-labsl_synchronization", "-labsl_throw_delegate", "-labsl_time",
            "-labsl_time_zone",
            "-Wl,--end-group", "-Wl,-Bdynamic",
            # System libs (dynamic, AFTER the static group). ssl/crypto satisfy
            # grpc's TLS refs; com_tls.hpp also uses the OpenSSL ENGINE API.
            "-lssl", "-lcrypto", "-latomic", "-lrt", "-ldl", "-lpthread", "-lm",
        ],
        "//conditions:default": [   # host x86 dev — grpc is shared-only here
            "-lgrpc++", "-lgrpc", "-lgpr", "-labsl_synchronization",
            "-lssl", "-lcrypto", "-lpthread",
        ],
    })
)
